2006-08-24  fabian

    * Fixed a few bugs related to the upgrade to new PSMTabBarControl.
    * Removed now redundant PTYTabViemItem
    * Cleaned up related PTYSession code
    
2006-08-23  fabian

    * Cleaned up iTermController.m, moved profile related code to PseudoTerminal.m
    * Cleaned up PseudoTerminal.m, to make it more robust to session addition/removal.
    * Updated PSMTabBarControl to the latest version 1.3
    * Fixed PreferencePanel so now the tab location works (only top and bottom though).
    
2006-08-22  fabian

    * Tweaked PTYTextView to enhance text display, especially with small fonts.
    
2006-03-26	ujwal

	* Added preference to choose between Metal and Aqua style window and tabs.
	* Added support to show warning bell in tab.

2006-03-25	ujwal

	* Added back support to show/hide first tab.

2006-03-23	ujwal

	* Made window metallized to get full Safari tab effect.

2006-03-20	ujwal

	* Initial checkin of new tabs provided by PSMTabBarControl. Not complete
	  or stable yet.
	* Rolled back the PTYTextView:-refresh change. Too many problems.

2006-03-17	ujwal
	
	* PTYTextView:-refresh selects only dirty regions to refresh before 
	  calling drawRect.
	* Removed all NSConnection related stuff from PTYTask.

2006-03-15  fabian

    * Put in locks to eliminate the bugs related to opening/closing sessions.
    * Removed NSConnection once again.
    * A (not-so-elegant) fix for occassional tab label refreshing problem.
    
2006-03-03  ujwal
	
	* Fixed VT100Screen:-setNewLine to redraw whole screen if buffer is full
	* Protecting PTYTextView:-refresh with locking datasource
	* Fixed memory leak in VT100Screen:-setString
	* Not using NSData in PTYTask:+_processReadThread. Instead passing raw char buffer.

2006-03-02  ujwal

	* Fixed VT100Screen:-numberOfLines to guarantee that it does not
	  report more lines than it actually has.

2006-03-02  fabian

    * Fixed VT100Screen::eraseInDisplay behavior.
    * Fixed CPU usage issue.